package com.stroganov.Indicators;

// Momentum = (P(close) /P-t(close))*100%
// P(close) – текущая цена закрытия
// P-t(close) – цена закрытия t периодов назад

public class Momentum {


}
