@startuml

title __ROBOT's Class Diagram__\n

  namespace com.stroganov {
    class com.stroganov.Candle {
    }
  }
  

  namespace com.stroganov {
    class com.stroganov.CandleStream {
    }
  }
  

  namespace com.stroganov {
    class com.stroganov.DateTimeFromString {
    }
  }
  

  namespace com.stroganov {
    namespace Grafics {
      class com.stroganov.Grafics.GraphicOfBalance {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Grafics {
      class com.stroganov.Grafics.GraphicOfIndicator {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Grafics {
      class com.stroganov.Grafics.GraphicOfTransactions {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Grafics {
      class com.stroganov.Grafics.Report {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      abstract class com.stroganov.Indicators.AbstractIndicator {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.EMA {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.IndicatorContainer {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.Momentum {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.RSA_Indicator {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.RSA_Indicator2 {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.SMA {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.SMMA {
      }
    }
  }
  

  namespace com.stroganov {
    class com.stroganov.MainRSA {
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      abstract class com.stroganov.Strategies.AbstractStrategy {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.Balance {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.RSA_Strategy {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.RSA_StrategyStopLoss {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      abstract class com.stroganov.Strategies.StartStrategy {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.StartStrategyNow {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.StrategyParam {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.TradeAction {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Strategies {
      class com.stroganov.Strategies.Transaction {
      }
    }
  }
  

  com.stroganov.Grafics.Report o-- com.stroganov.Strategies.Balance : balance
  com.stroganov.Indicators.EMA -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.IndicatorContainer o-- com.stroganov.Indicators.AbstractIndicator : abstractIndicator
  com.stroganov.Indicators.IndicatorContainer o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Indicators.RSA_Indicator -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.RSA_Indicator2 -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.SMA -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.Indicators.AbstractIndicator : rsa
  com.stroganov.Strategies.AbstractStrategy o-- com.stroganov.Strategies.TradeAction : tradeAction
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.Indicators.AbstractIndicator : rsa
  com.stroganov.Strategies.RSA_Strategy o-- com.stroganov.Strategies.TradeAction : tradeAction
  com.stroganov.Strategies.RSA_StrategyStopLoss -up-|> com.stroganov.Strategies.AbstractStrategy
  com.stroganov.Strategies.StartStrategy o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Strategies.StartStrategyNow -up-|> com.stroganov.Strategies.StartStrategy
  com.stroganov.Strategies.StartStrategyNow o-- com.stroganov.Indicators.IndicatorContainer : container
  com.stroganov.Strategies.TradeAction o-- com.stroganov.Strategies.Balance : balance
  com.stroganov.Strategies.Transaction o-- com.stroganov.Strategies.Balance : balance


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
